--- a/src/bookstore/FXMLBooksPage.fxml
+++ b/src/bookstore/FXMLBooksPage.fxml
@@ -6,35 +6,49 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="370.0" prefWidth="560.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLBooksPageController">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLBooksPageController">
    <children>
-      <TableView fx:id="table1" layoutY="179.0" prefHeight="155.0" prefWidth="575.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <TableView fx:id="table1" layoutY="204.0" prefHeight="246.0" prefWidth="700.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <columns>
           <TableColumn prefWidth="75.0" text="C1" visible="false" />
         </columns>
       </TableView>
-      <TextField fx:id="textField1" layoutY="154.0" prefHeight="25.0" prefWidth="80.0" promptText="Title" />
-      <TextField fx:id="textField2" layoutX="80.0" layoutY="154.0" prefHeight="25.0" prefWidth="80.0" promptText="Author" />
-      <TextField fx:id="textField3" layoutX="160.0" layoutY="154.0" prefHeight="25.0" prefWidth="80.0" promptText="ISBN" />
-      <TextField fx:id="textField4" layoutX="240.0" layoutY="154.0" prefHeight="25.0" prefWidth="80.0" promptText="Genre" />
-      <TextField fx:id="textField5" layoutX="320.0" layoutY="154.0" prefHeight="25.0" prefWidth="80.0" promptText="Quantity" />
-      <TextField fx:id="textField6" layoutX="400.0" layoutY="154.0" prefHeight="25.0" prefWidth="80.0" promptText="Price" />
-      <TextField fx:id="textField7" layoutX="480.0" layoutY="154.0" prefHeight="25.0" prefWidth="80.0" promptText="Client's initialer" />
-      <Button fx:id="sellBookButton" layoutX="463.0" layoutY="122.0" mnemonicParsing="false" onAction="#sellBookHandle" text="Sell" />
-      <Button fx:id="addBookButton" layoutX="54.0" layoutY="122.0" mnemonicParsing="false" onAction="#addBookHandle" text="Add a new book" />
-      <Button fx:id="backButton" layoutX="14.0" layoutY="334.0" mnemonicParsing="false" onAction="#handleBackButton" text="Back" />
-      <Button fx:id="exitButton" layoutX="494.0" layoutY="334.0" mnemonicParsing="false" onAction="#handleExitButton" text="Exit" />
-      <TextField fx:id="searchText" layoutX="305.0" layoutY="47.0" promptText="Title,author..." />
-      <Label layoutX="299.0" layoutY="126.0" prefHeight="17.0" prefWidth="95.0" text="Amount" />
-      <MenuButton layoutX="454.0" layoutY="47.0" mnemonicParsing="false" text="Search">
+      <TextField fx:id="textField1" layoutY="154.0" prefHeight="25.0" prefWidth="80.0" promptText="Title" AnchorPane.leftAnchor="0.0" />
+      <TextField fx:id="textField2" layoutX="80.0" layoutY="154.0" prefHeight="25.0" prefWidth="97.0" promptText="Author" />
+      <TextField fx:id="textField3" layoutX="177.0" layoutY="154.0" prefHeight="25.0" prefWidth="103.0" promptText="ISBN" />
+      <TextField fx:id="textField4" layoutX="276.0" layoutY="154.0" prefHeight="25.0" prefWidth="103.0" promptText="Genre" />
+      <TextField fx:id="textField5" layoutX="377.0" layoutY="154.0" prefHeight="25.0" prefWidth="103.0" promptText="Quantity" />
+      <TextField fx:id="textField6" layoutX="481.0" layoutY="154.0" prefHeight="25.0" prefWidth="103.0" promptText="Price" />
+      <TextField fx:id="textField7" layoutX="606.0" layoutY="154.0" prefHeight="25.0" prefWidth="103.0" promptText="Client's initialer" AnchorPane.rightAnchor="14.0" />
+      <Button fx:id="sellBookButton" layoutX="360.0" layoutY="461.0" mnemonicParsing="false" onAction="#sellBookHandle" prefHeight="25.0" prefWidth="80.0" text="Sell" />
+      <Button fx:id="addBookButton" layoutX="14.0" layoutY="179.0" mnemonicParsing="false" onAction="#addBookHandle" prefHeight="25.0" prefWidth="103.0" text="Add a new book" />
+      <Button fx:id="backButton" layoutX="14.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="25.0" prefWidth="68.0" text="Back" />
+      <Button fx:id="exitButton" layoutX="606.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleExitButton" prefHeight="25.0" prefWidth="80.0" text="Exit" />
+      <TextField fx:id="searchText" layoutX="458.0" layoutY="47.0" promptText="Title,author..." />
+      <Label fx:id="labelDailyAmount" layoutX="17.0" layoutY="51.0" prefHeight="17.0" prefWidth="182.0" text="Daily amount" />
+      <TextField fx:id="textFieldClientId" layoutX="153.0" layoutY="461.0" prefHeight="25.0" prefWidth="103.0" promptText="Client's ID" />
+      <TextField fx:id="textFieldEmployeeInitialer" layoutX="257.0" layoutY="461.0" prefHeight="25.0" prefWidth="103.0" promptText="Emplyee's initialer" />
+      <MenuButton layoutX="606.0" layoutY="47.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" text="Search">
         <items>
-          <MenuItem mnemonicParsing="false" text="Title" />
-          <MenuItem mnemonicParsing="false" text="Author" />
-            <MenuItem mnemonicParsing="false" text="ISBN" />
+          <MenuItem fx:id="searchISBNButton" mnemonicParsing="false" onAction="#searchISBNHandle" text="ISBN" />
+          <MenuItem mnemonicParsing="false" onAction="#searchAuthorHandle" text="Author" />
+            <MenuItem mnemonicParsing="false" onAction="#searchTitleHandle" text="Title" />
+            <MenuItem mnemonicParsing="false" text="Price">
+               <graphic>
+                  <MenuButton mnemonicParsing="false" opacity="0.52" text="Interval">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="&lt;100" />
+                      <MenuItem mnemonicParsing="false" text="&gt;100&lt;500" />
+                    </items>
+                  </MenuButton>
+               </graphic>
+            </MenuItem>
         </items>
       </MenuButton>
-      <TextField fx:id="textFieldClientId" layoutX="98.0" layoutY="334.0" promptText="Client's ID" />
-      <TextField fx:id="textFieldEmployeeInitialer" layoutX="246.0" layoutY="334.0" promptText="Emplyee's initialer" />
-      <Button layoutX="395.0" layoutY="334.0" mnemonicParsing="false" text="Done" />
+      <Button fx:id="returnBookButton" layoutX="583.0" layoutY="179.0" mnemonicParsing="false" onAction="#returnButtonHandle" prefHeight="25.0" prefWidth="103.0" text="Return a book" />
+      <Label layoutX="200.0" layoutY="28.0" prefHeight="17.0" prefWidth="190.0" text="Current operation " />
+      <Button fx:id="printButton" layoutX="606.0" layoutY="97.0" mnemonicParsing="false" onAction="#printButtonHandle" prefHeight="25.0" prefWidth="80.0" text="Print" />
+      <TextArea fx:id="textAreaOperations" layoutX="200.0" layoutY="45.0" prefHeight="104.0" prefWidth="242.0" />
+      <Label fx:id="labelCurrentAmount" layoutX="15.0" layoutY="101.0" prefHeight="17.0" prefWidth="182.0" text="Current amount" />
    </children>
 </AnchorPane>
