--- a/src/bookstore/FXMLClientsPage.fxml
+++ b/src/bookstore/FXMLClientsPage.fxml
@@ -6,9 +6,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="bookstore.FXMLClientsPageController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLClientsPageController">
    <children>
       <Button fx:id="backButton" layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#backButtonHandle" text="Back" />
+      <TableView fx:id="table2" layoutX="3.0" layoutY="161.0" prefHeight="200.0" prefWidth="593.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="C1" visible="false" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
