--- a/src/bookstore/FXMLMainPage.fxml
+++ b/src/bookstore/FXMLMainPage.fxml
@@ -1,33 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLMainPageController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLMainPage">
    <children>
-      <Label layoutX="284.0" layoutY="21.0" text="Welcome" textFill="#1d8a31">
-         <font>
-            <Font size="24.0" />
-         </font></Label>
-      <Label layoutX="328.0" layoutY="70.0" text="to" />
-      <Label layoutX="282.0" layoutY="97.0" text="FRIENDS" textFill="#128040">
-         <font>
-            <Font name="System Italic" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="325.0" layoutY="124.0" text="a" />
-      <Label layoutX="278.0" layoutY="167.0" text="friendly book store" textFill="#4cd63a" />
-      <Button fx:id="Button1" layoutX="97.0" layoutY="329.0" mnemonicParsing="false" onAction="#signIn" prefHeight="25.0" prefWidth="60.0" text="Sign in" />
-      <Button fx:id="Button2" layoutX="97.0" layoutY="354.0" mnemonicParsing="false" onAction="#connect" text="Connect" textAlignment="CENTER" />
-      <Button fx:id="Button3" layoutX="496.0" layoutY="342.0" mnemonicParsing="false" onAction="#exit" prefHeight="25.0" prefWidth="52.0" text="Exit" />
-      <TextField fx:id="text1" layoutX="53.0" layoutY="256.0" onAction="#signIn" promptText="ID" />
-      <Label fx:id="label" alignment="CENTER" layoutX="54.0" layoutY="192.0" prefHeight="17.0" prefWidth="519.0" />
-      <ImageView fx:id="imageView" fitHeight="567.0" fitWidth="316.0" layoutX="157.0" opacity="0.22" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="157.0" AnchorPane.rightAnchor="127.0" AnchorPane.topAnchor="0.0" />
-      <PasswordField fx:id="pass1" layoutX="53.0" layoutY="281.0" onAction="#signIn" promptText="Password" />
+      <VBox layoutX="77.0" layoutY="89.0" prefHeight="200.0" prefWidth="145.0">
+         <children>
+            <Button fx:id="button1" mnemonicParsing="false" onAction="#handleEmployeesButton" prefHeight="25.0" prefWidth="146.0" text="Go to employees page" />
+            <Button fx:id="button2" mnemonicParsing="false" onAction="#handleClientsButton" prefHeight="25.0" prefWidth="149.0" text="Go to clients page" />
+            <Button fx:id="button3" mnemonicParsing="false" onAction="#handleBooksPage" prefHeight="25.0" prefWidth="145.0" text="Go to books page" />
+            <Button fx:id="button4" mnemonicParsing="false" onAction="#handleGoBack" prefHeight="25.0" prefWidth="145.0" text="Go back" />
+            <Button fx:id="button5" mnemonicParsing="false" onAction="#handleQuitButton" prefHeight="25.0" prefWidth="145.0" text="Quit" />
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
