--- a/src/bookstore/FXMLBooksPage.fxml
+++ b/src/bookstore/FXMLBooksPage.fxml
@@ -8,25 +8,32 @@
 
 <AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLBooksPageController">
    <children>
-      <TableView fx:id="table1" layoutY="204.0" prefHeight="246.0" prefWidth="700.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <HBox layoutX="66.0" layoutY="154.0" prefHeight="25.0" prefWidth="578.0">
+         <children>
+            <TextField fx:id="textFieldTitle" prefHeight="25.0" prefWidth="97.0" promptText="Title" />
+            <TextField fx:id="textFieldAuthor" prefHeight="25.0" prefWidth="97.0" promptText="Author" />
+            <TextField fx:id="textFieldISBN" prefHeight="25.0" prefWidth="97.0" promptText="ISBN" />
+            <TextField fx:id="textFieldGenre" prefHeight="25.0" prefWidth="97.0" promptText="Genre" />
+            <TextField fx:id="textFieldQuantity" prefHeight="25.0" prefWidth="97.0" promptText="Quantity" />
+            <TextField fx:id="textFieldPrice" prefHeight="25.0" prefWidth="97.0" promptText="Price" />
+         </children>
+      </HBox>
+      <TableView fx:id="tableBooks" layoutY="204.0" prefHeight="200.0" prefWidth="600.0" AnchorPane.bottomAnchor="96.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <columns>
           <TableColumn prefWidth="75.0" text="C1" visible="false" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <TextField fx:id="textFieldTitle" layoutY="154.0" prefHeight="25.0" prefWidth="80.0" promptText="Title" AnchorPane.leftAnchor="0.0" />
-      <TextField fx:id="textFieldAuthor" layoutX="80.0" layoutY="154.0" prefHeight="25.0" prefWidth="97.0" promptText="Author" />
-      <TextField fx:id="textFieldISBN" layoutX="177.0" layoutY="154.0" prefHeight="25.0" prefWidth="103.0" promptText="ISBN" />
-      <TextField fx:id="textFieldGenre" layoutX="276.0" layoutY="154.0" prefHeight="25.0" prefWidth="103.0" promptText="Genre" />
-      <TextField fx:id="textFieldQuantity" layoutX="377.0" layoutY="154.0" prefHeight="25.0" prefWidth="103.0" promptText="Quantity" />
-      <TextField fx:id="textFieldPrice" layoutX="481.0" layoutY="154.0" prefHeight="25.0" prefWidth="103.0" promptText="Price" />
-      <Button fx:id="sellBookButton" layoutX="360.0" layoutY="461.0" mnemonicParsing="false" onAction="#sellBookHandle" prefHeight="25.0" prefWidth="80.0" text="Sell" />
-      <Button fx:id="addBookButton" layoutX="14.0" layoutY="179.0" mnemonicParsing="false" onAction="#addBookHandle" prefHeight="25.0" prefWidth="103.0" text="Add a new book" />
-      <Button fx:id="backButton" layoutX="14.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="25.0" prefWidth="68.0" text="Back" />
-      <Button fx:id="exitButton" layoutX="606.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleExitButton" prefHeight="25.0" prefWidth="80.0" text="Exit" />
-      <TextField fx:id="searchText" layoutX="458.0" layoutY="47.0" promptText="Title,author..." />
-      <Label fx:id="labelDailyAmount" layoutX="17.0" layoutY="51.0" prefHeight="17.0" prefWidth="182.0" text="Daily amount" />
-      <TextField fx:id="textFieldClientId" layoutX="200.0" layoutY="461.0" prefHeight="25.0" prefWidth="103.0" promptText="Client's ID" />
-      <MenuButton layoutX="606.0" layoutY="47.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" text="Search">
+      <Button fx:id="sellBookButton" layoutX="402.0" layoutY="461.0" mnemonicParsing="false" onAction="#sellBookHandle" prefHeight="25.0" prefWidth="80.0" text="Sell" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="218.0" />
+      <Button fx:id="addBookButton" layoutX="14.0" layoutY="179.0" mnemonicParsing="false" onAction="#addBookHandle" prefHeight="25.0" prefWidth="103.0" text="Add a new book" AnchorPane.leftAnchor="14.0" />
+      <Button fx:id="backButton" layoutX="14.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="25.0" prefWidth="68.0" text="Back" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" />
+      <Button fx:id="exitButton" layoutX="606.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleExitButton" prefHeight="25.0" prefWidth="80.0" text="Exit" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
+      <TextField fx:id="searchText" layoutX="509.0" layoutY="47.0" prefHeight="25.0" prefWidth="97.0" promptText="Title,author..." AnchorPane.rightAnchor="94.0" AnchorPane.topAnchor="47.0" />
+      <Label fx:id="labelDailyAmount" layoutX="14.0" layoutY="64.0" prefHeight="17.0" prefWidth="159.0" text="Daily amount" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="64.0" />
+      <TextField fx:id="textFieldClientId" layoutX="200.0" layoutY="461.0" prefHeight="25.0" prefWidth="103.0" promptText="Client's ID" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="200.0" />
+      <MenuButton layoutX="606.0" layoutY="47.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" text="Search" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="47.0">
         <items>
           <MenuItem fx:id="searchISBNButton" mnemonicParsing="false" onAction="#searchISBNHandle" text="ISBN" />
           <MenuItem mnemonicParsing="false" onAction="#searchAuthorHandle" text="Author" />
@@ -35,21 +42,22 @@
                <graphic>
                   <MenuButton mnemonicParsing="false" opacity="0.52" text="Interval">
                     <items>
-                      <MenuItem mnemonicParsing="false" text="&lt;100" />
-                      <MenuItem mnemonicParsing="false" text="&gt;100&lt;500" />
+                      <MenuItem mnemonicParsing="false" onAction="#searchPrice1Handle" text="&lt;100" />
+                      <MenuItem mnemonicParsing="false" onAction="#searchPrice2Handle" text="100=&lt;price&lt;500" />
+                        <MenuItem mnemonicParsing="false" onAction="#searchPrice3Handle" text="&gt;=500" />
                     </items>
                   </MenuButton>
                </graphic>
             </MenuItem>
         </items>
       </MenuButton>
-      <Button fx:id="returnBookButton" layoutX="583.0" layoutY="179.0" mnemonicParsing="false" onAction="#returnButtonHandle" prefHeight="25.0" prefWidth="103.0" text="Return a book" />
-      <Label layoutX="200.0" layoutY="28.0" prefHeight="17.0" prefWidth="190.0" text="Current operation " />
-      <Button fx:id="printButton" layoutX="606.0" layoutY="97.0" mnemonicParsing="false" onAction="#printButtonHandle" prefHeight="25.0" prefWidth="80.0" text="Print" />
-      <TextArea fx:id="textAreaOperations" layoutX="200.0" layoutY="45.0" prefHeight="104.0" prefWidth="242.0" />
-      <Label fx:id="labelCurrentAmount" layoutX="15.0" layoutY="101.0" prefHeight="17.0" prefWidth="182.0" text="Current amount" />
-      <Label layoutX="129.0" layoutY="465.0" text="Client's ID" />
-      <Label layoutX="66.0" layoutY="39.0" text="Label" />
-      <Button fx:id="changeButton" layoutX="377.0" layoutY="179.0" mnemonicParsing="false" onAction="#handleChangeButton" prefHeight="25.0" prefWidth="103.0" text="Change" />
+      <Button fx:id="returnBookButton" layoutX="208.0" layoutY="179.0" mnemonicParsing="false" onAction="#returnButtonHandle" prefHeight="25.0" prefWidth="103.0" text="Return a book" AnchorPane.leftAnchor="208.0" />
+      <Label layoutX="277.0" layoutY="20.0" prefHeight="17.0" prefWidth="103.0" text="Current operation " AnchorPane.leftAnchor="277.0" AnchorPane.rightAnchor="320.0" AnchorPane.topAnchor="20.0" />
+      <Button fx:id="printButton" layoutX="606.0" layoutY="97.0" mnemonicParsing="false" onAction="#printButtonHandle" prefHeight="25.0" prefWidth="80.0" text="Print" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="97.0" />
+      <Label fx:id="labelCurrentAmount" layoutX="14.0" layoutY="89.0" prefHeight="17.0" prefWidth="159.0" text="Current amount" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="527.0" AnchorPane.topAnchor="89.0" />
+      <Label layoutX="129.0" layoutY="465.0" text="Client's ID" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="129.0" />
+      <Button fx:id="changeButton" layoutX="377.0" layoutY="179.0" mnemonicParsing="false" onAction="#handleChangeButton" prefHeight="25.0" prefWidth="103.0" text="Change" AnchorPane.rightAnchor="220.0" />
+      <TextArea fx:id="textAreaOperations" layoutX="277.0" layoutY="45.0" prefHeight="104.0" prefWidth="216.0" AnchorPane.leftAnchor="277.0" AnchorPane.rightAnchor="207.0" AnchorPane.topAnchor="45.0" />
+      <Label fx:id="labelError" layoutX="480.0" layoutY="20.0" prefHeight="17.0" prefWidth="205.0" text="Label" />
    </children>
 </AnchorPane>
