--- a/src/bookstore/FXMLMainPage.fxml
+++ b/src/bookstore/FXMLMainPage.fxml
@@ -8,14 +8,10 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLMainPage">
    <children>
-      <VBox layoutX="228.0" layoutY="138.0" prefHeight="124.0" prefWidth="145.0">
-         <children>
-            <Button fx:id="button1" mnemonicParsing="false" onAction="#handleEmployeesButton" prefHeight="25.0" prefWidth="146.0" text="Employees page" />
-            <Button fx:id="button2" mnemonicParsing="false" onAction="#handleClientsButton" prefHeight="25.0" prefWidth="149.0" text="Clients page" />
-            <Button fx:id="button3" mnemonicParsing="false" onAction="#handleBooksPage" prefHeight="25.0" prefWidth="145.0" text="Books page" />
-            <Button fx:id="button4" mnemonicParsing="false" onAction="#handleGoBack" prefHeight="25.0" prefWidth="145.0" text="Back" />
-            <Button fx:id="button5" mnemonicParsing="false" onAction="#handleQuitButton" prefHeight="25.0" prefWidth="145.0" text="Quit" />
-         </children>
-      </VBox>
+      <Button fx:id="buttonEmployee" layoutX="227.0" layoutY="164.0" mnemonicParsing="false" onAction="#handleEmployeesButton" prefHeight="25.0" prefWidth="146.0" text="Employees page" AnchorPane.leftAnchor="227.0" AnchorPane.rightAnchor="227.0" />
+      <Button fx:id="buttonClient" layoutX="227.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleClientsButton" prefHeight="25.0" prefWidth="146.0" text="Clients page" AnchorPane.leftAnchor="227.0" AnchorPane.rightAnchor="227.0" />
+      <Button fx:id="buttonBooks" layoutX="228.0" layoutY="213.0" mnemonicParsing="false" onAction="#handleBooksPage" prefHeight="25.0" prefWidth="145.0" text="Books page" AnchorPane.leftAnchor="228.0" AnchorPane.rightAnchor="226.0" />
+      <Button fx:id="buttonBack" layoutX="228.0" layoutY="238.0" mnemonicParsing="false" onAction="#handleGoBack" prefHeight="25.0" prefWidth="145.0" text="Back" AnchorPane.leftAnchor="228.0" AnchorPane.rightAnchor="226.0" />
+      <Button fx:id="buttonExit" layoutX="228.0" layoutY="263.0" mnemonicParsing="false" onAction="#handleQuitButton" prefHeight="25.0" prefWidth="145.0" text="Quit" AnchorPane.leftAnchor="228.0" AnchorPane.rightAnchor="226.0" />
    </children>
 </AnchorPane>
