--- a/src/bookstore/FXMLPassword.fxml
+++ b/src/bookstore/FXMLPassword.fxml
@@ -9,8 +9,8 @@
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLPasswordController">
    <children>
       <Button fx:id="doneButton" layoutX="221.0" layoutY="332.0" mnemonicParsing="false" onAction="#handleButtonDone" prefHeight="25.0" prefWidth="149.0" text="Done" />
-      <PasswordField fx:id="pass1" layoutX="222.0" layoutY="175.0" />
-      <PasswordField fx:id="pass2" layoutX="222.0" layoutY="225.0" />
+      <PasswordField fx:id="password1" layoutX="222.0" layoutY="175.0" />
+      <PasswordField fx:id="password2" layoutX="222.0" layoutY="225.0" text="password" />
       <Label layoutX="235.0" layoutY="208.0" text="Confirm your password" />
       <Label layoutX="248.0" layoutY="158.0" text="Set your password" />
       <Label alignment="CENTER" layoutX="272.0" layoutY="55.0" text="Welcome" />
